crates/syntax/src/snapshots/nafi_syntax__parser__parse_expr-2.snap
---
source: crates/syntax/src/parser.rs
expression: ✎ 1+2*3+4
---
Expr@0..7
  Expr@0..5
    Expr@0..1
      LitDigits@0..1 "1"
    Syntax@1..2 "+"
    Expr@2..5
      Expr@2..3
        LitDigits@2..3 "2"
      Syntax@3..4 "*"
      Expr@4..5
        LitDigits@4..5 "3"
  Syntax@5..6 "+"
  Expr@6..7
    LitDigits@6..7 "4"

